# zksnark-java-sdk

./: .gitignore  .gitmodules  README.md  build.gradle  jitpack.yml  pom.xml  settings.gradle
cpp/: CMakeLists.txt
cpp/src/: LibarkworksJNIImpl.cpp  LibrustzcashJNIImpl.c  LibrustzcashJNIImpl.cpp  LibsodiumJNIImpl.cpp  memcpy.c
gradle/wrapper/: gradle-wrapper.properties
rust/libarkworks/: Cargo.toml
rust/libarkworks/include/: libarkworks.h
rust/libarkworks/src/: bn254.rs  lib.rs  serialize.rs
src/license/: LICENSE-HEADER.txt
src/main/java/org/tron/common/util/: Utils.java
src/main/java/org/tron/common/zksnark/: Libarkworks.java  LibarkworksWrapper.java  Librustzcash.java  LibrustzcashWrapper.java  Libsodium.java  LibsodiumWrapper.java
src/main/resources/native-package/macos/: libzksnarkjni.dylib
src/test/java/org/tron/common/zksnark/: LibarkworksTest.java  LibrustzcashTest.java  LibsodiumTest.java
